--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,11 +14,7 @@
                     <ul class="header__list">
                         <li class="header__item"><a href="/" class="header_link">Home</a></li>
                         <li class="header__item"><a href="/recipes" class="header_link">Recipes</a></li>
-                        {{#if logged_in}}
-            <li><button id="logout" href="/">Logout</button></li>
-          {{else}}
-            <li><a href="/login">Login</a></li>
-          {{/if}}
+                        <li class="header__item"><a href="/login" class="header_link">Login</a></li>
                     </ul>
                 </nav>
             </div>
