--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -11,7 +11,7 @@
         <h1>{{user.username}}</h1>
         <img src="{{user.profilePicture}}" alt="Profile Picture">
         <p>Recipes: {{user.recipes}}</p>
-        <p>Joined: {{formatDate user.joined}}</p>
+        <p>Joined: {{format_date user.joined}}</p>
     </div>
 
     <script src="app.js"></script>
