--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,10 @@
-div class="row justify-space-between-md">
+<div class="row justify-space-between-md">
   <div class="login-card">
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="username-login">Username:</label>
+        <input class="form-input" type="text" id="username-login" />
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
