dashboard loads now

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item"><a href="/" class="header_link">Home</a></li>
-                        <li class="header__item"><a href="/userprofile" class="header_link">Profile</a></li>
+                        <li class="header__item"><a href="/profile" class="header_link">Profile</a></li>
                         {{#if logged_in}}
             <li><button id="logout" href="/">Logout</button></li>
           {{else}}
