added that smoothe style to make the page really pop!

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Drawer</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/login.css" />
   </head>
 
     <body>
@@ -23,9 +24,9 @@
                     </ul>
                 </nav>
             </div>
-    </body>
     <main>
        <div class="container">
         {{{body}}}
         </div>
     </main>
+    </body>
