--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
                         {{#if logged_in}}
             <li><button id="logout" href="/">Logout</button></li>
           {{else}}
-            <li><a href="/login">Login</a></li>
+            <li><a id="login" href="/login">Login</a></li>
           {{/if}}
                     </ul>
                 </nav>
