fixed bug for GET /:id route for recipes, added recipes handlebar, moved script tag from login to main handlebars, changed alert on login to show alert instead of status text, fixed bug not connecting read more to recipes page, now redirects to login page, commented out extra html in user profile

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
+{{!-- <!DOCTYPE html>
+<html> --}}
+{{!-- <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
+</head> --}}
+{{!-- <body> --}}
     <div class="profile">
         <h1>{{user.username}}</h1>
         <img src="{{user.profilePicture}}" alt="Profile Picture">
@@ -14,11 +14,11 @@
         <p>Joined: {{format_date user.joined}}</p>
     </div>
 
-    <script src="app.js"></script>
-</body>
+    {{!-- <script src="app.js"></script> --}}
+{{!-- </body>
  <main>
        <div class="container">
-        {{{body}}}
-        </div>
-    </main>
-</html>
+        {{{body}}} --}}
+        {{!-- </div> --}}
+    {{!-- </main>
+</html> --}}
