fixed small bugs not rendering pages and modified the recipe page

--- a/views/viewRecipe.handlebars
+++ b/views/viewRecipe.handlebars
@@ -2,13 +2,12 @@
   <a href="/recipes/{{id}}">
     <h3>{{recipe_name}}</h3>
     <div class="recipe-details">
-      <h3>{{recipe_name}}</h3>
       <p>{{recipe_category}}</p>
       <p>{{ingredients}}</p>
       <p>{{recipe_measurement}}</p>
       <p>{{recipe_instructions}}</p>
       <p>{{recipe_cooktime}}</p>
-      <p>{{recipe_servings}}</p>
+      <p>Servings: {{recipe_servings}}</p>
       <p>By: {{user.user_id}}</p>
     </div>
   </a>
