killed all loggedIn camels, added script to main

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,7 @@
       </div>
     </main>
     <script src="js/login.js"></script>
+    <script src="js/logout.js"></script>
   </body>
 
   </html>
