--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,23 +1,73 @@
-{{!-- <!DOCTYPE html>
-<html> --}}
-{{!-- <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Profile</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head> --}}
-{{!-- <body> --}}
+
     <div class="profile">
         <h1>{{user.username}}</h1>
         <img src="{{user.profilePicture}}" alt="Profile Picture">
         <p>Recipes: {{user.recipes}}</p>
     </div>
+    {{#if recipes}}
+    {{#each recipes}}
+    <div class="recipe-card" id="recipe-card">
+        <a href="/recipes/{{id}}">
+            <h3>{{recipe_name}}</h3>
+            <div class="recipe-details">
+                <p>{{recipe_category}}</p>
+                <p>{{ingredients}}</p>
+                <p>{{recipe_measurement}}</p>
+                <p>{{recipe_instructions}}</p>
+                <p>{{recipe_cooktime}}</p>
+                <p>Servings: {{recipe_servings}}</p>
+                <p>By: {{user.user_id}}</p>
+            </div>
+        </a>
+        </div>
+    {{/each}}
+    {{else}}
+    <h3>You have no recipes yet</h3>
+    {{/if}}
+    <form action="/submit" method="POST">
+      <label for="recipe_name">Recipe Name:</label>
+      <input type="text" id="recipe_name" name="recipe_name" required>
 
-    {{!-- <script src="app.js"></script> --}}
-{{!-- </body>
- <main>
-       <div class="container">
-        {{{body}}} --}}
-        {{!-- </div> --}}
-    {{!-- </main>
-</html> --}}
+      <label for="ingredients">Ingredients:</label>
+      <input type="text" id="ingredients" name="ingredients" required>
+
+      <label for="recipe_measurement">Measurement:</label>
+      <input type="text" id="recipe_measurement" name="recipe_measurement" required>
+
+      <label for="recipe_instructions">Instructions:</label>
+      <textarea id="recipe_instructions" name="recipe_instructions" required></textarea>
+
+      <label for="recipe_cooktime">Cook Time:</label>
+      <input type="text" id="recipe_cooktime" name="recipe_cooktime" required>
+
+      <label for="recipe_servings">Servings:</label>
+      <input type="number" id="recipe_servings" name="recipe_servings" required>
+
+      <label for="recipe_category">Category:</label>
+      <select id="recipe_category" name="recipe_category" required>
+        <option value="Pasta/Noodles">Pasta/Noodles</option>
+        <option value="Vegetarian">Vegetarian</option>
+        <option value="Vegan">Vegan</option>
+        <option value="Gluten Free">Gluten Free</option>
+        <option value="Breakfast">Breakfast</option>
+        <option value="Lunch">Lunch</option>
+        <option value="Dinner">Dinner</option>
+        <option value="Snack">Snack</option>
+        <option value="Dessert">Dessert</option>
+        <option value="Soup">Soup</option>
+        <option value="Salad">Salad</option>
+        <option value="Seafood">Seafood</option>
+        <option value="Meat">Meat</option>
+        <option value="Sandwich">Sandwich</option>
+        <option value="Side">Side</option>
+        <option value="Other">Other</option>
+      </select>
+
+      <label for="user_id">User ID:</label>
+      <input type="number" id="user_id" name="user_id" required>
+
+      <button type="submit">Submit</button>
+    </form>
+
+
+        
