--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -24,7 +24,7 @@
     {{else}}
     <h3>You have no recipes yet</h3>
     {{/if}}
-    <form action="/submit" method="POST">
+    <form id="addRecipe" method="POST">
       <label for="recipe_name">Recipe Name:</label>
       <input type="text" id="recipe_name" name="recipe_name" required>
 
@@ -68,6 +68,8 @@
 
       <button type="submit">Submit</button>
     </form>
+
+    <script src="js/addRecipe.js"></script>
 
 
         
