added styling for form to add recipe, changed appearance of user profile a smidge, fixed error not rndering username for who created the recipe

--- a/views/viewRecipe.handlebars
+++ b/views/viewRecipe.handlebars
@@ -8,7 +8,7 @@
       <p>{{recipe_instructions}}</p>
       <p>{{recipe_cooktime}}</p>
       <p>Servings: {{recipe_servings}}</p>
-      <p>By: {{user.user_id}}</p>
+      <p>By: {{user.username}}</p>
     </div>
   </a>
     </section>
