--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,7 +1,7 @@
 
     <div class="profile">
         <h1>{{user.username}}</h1>
-        <img src="{{user.profilePicture}}" alt="Profile Picture">
+        {{!-- <img src="{{user.profilePicture}}" alt="Profile Picture"> --}}
         <p>Recipes: {{user.recipes}}</p>
     </div>
     {{#if recipes}}
@@ -16,7 +16,7 @@
                 <p>{{recipe_instructions}}</p>
                 <p>{{recipe_cooktime}}</p>
                 <p>Servings: {{recipe_servings}}</p>
-                <p>By: {{user.user_id}}</p>
+                <p>By: {{user.username}}</p>
             </div>
         </a>
         </div>
