--- a/views/viewRecipe.handlebars
+++ b/views/viewRecipe.handlebars
@@ -2,11 +2,11 @@
   <a href="/recipes/{{id}}">
     <h3>{{recipe_name}}</h3>
     <div class="recipe-details">
-      <p>{{recipe_category}}</p>
-      <p>{{ingredients}}</p>
-      <p>{{recipe_measurement}}</p>
-      <p>{{recipe_instructions}}</p>
-      <p>{{recipe_cooktime}}</p>
+      <p>Category: {{recipe_category}}</p>
+      <p>Ingredients: {{ingredients}}</p>
+      <p>Measurements: {{recipe_measurement}}</p>
+      <p>Instructions: {{recipe_instructions}}</p>
+      <p>Cooktime: {{recipe_cooktime}}</p>
       <p>Servings: {{recipe_servings}}</p>
       <p>By: {{user.username}}</p>
     </div>
