added like button to fav recipes for users and minor bug fixes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,8 @@
     </main>
     <script src="js/login.js"></script>
     <script src="js/logout.js"></script>
+    <script src="js/like.js"></script>
+
   </body>
 
   </html>
